--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,28 +1,51 @@
 $background: #0E0F10;
-$header_height: 3rem;
+$header_height: 5rem;
 $main_height: calc(100vh - #{$header_height});
 
-#root, body, html {
-  flex-direction: column;
-  width: 100%;
+body, html{
   margin: 0;
+  height: 100%;
+  width: 100%;
+}
+
+#root {
   background: $background;
+  height: 100%;
+  width: 100%;
+  display: grid;
+  grid-template-areas:  "aside header"
+                        "aside  main"
+                        "aside  footer";
+  grid-template-rows: 5rem 100vh 15rem;
+  grid-template-columns: 3rem 1fr;
 }
 
 header {
-  height: $header_height;
-  width: 100%;
-  background: red;
-  padding: 1rem;
+  background: #a11e21;
+  grid-area: header;
+
+}
+
+aside {
+  grid-area: aside;
+  background: #39a188;
 }
 
 main {
-  height: $main_height;
-  width: 100%;
+  grid-area: main;
+  background: #a1903d;
 }
 
 footer {
-  height: 10rem;
-  width: 100%;
-  background: blue;
+  grid-area: footer;
+  background: #FFFFFF;
+  outline: 1px solid #707070;
+  .footer{
+    display: flex;
+    justify-content: ;
+    &_content{
+      border: 1px solid #0E0F10;
+    }
+  }
+
 }
