--- a/src/styles/asside.scss
+++ b/src/styles/asside.scss
@@ -1,9 +1,14 @@
+@import "colors";
+
 aside {
+  outline: 0.5px solid #dff1ff;
+
+  background: $background;
   grid-area: aside;
-  background: #39a188;
   display: flex;
   justify-content: center;
   align-items: center;
+
   .content_rotate {
     .asside__text {
       text-align: center;
@@ -11,7 +16,7 @@ aside {
       -webkit-transform: rotate(270deg);
       -moz-transform: rotate(270deg);
       -o-transform: rotate(270deg);
-      color: #FFFFFF;
+      color: $text-color;
       white-space: pre;
     }
   }
