--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,7 @@
 @import "./footer";
 @import "./asside";
+@import "./colors";
 
-$background: #0E0F10;
 $header_height: 4rem;
 $main_height: calc(100vh - #{$header_height});
 
@@ -34,16 +34,13 @@ body, html{
 }
 
 header {
-  background: #a11e21;
+  outline: 0.5px solid #dff1ff;
   grid-area: header;
-
 }
-
-
 
 main {
   grid-area: main;
-  background: #a1903d;
+  outline: 0.5px solid #dff1ff;
 }
 
 
