--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -9,8 +9,6 @@ footer {
     height: 100%;
 
     &__content {
-      outline: 0.5px solid #0E0F10;
-
       display: flex;
       flex-direction: column;
       justify-content: space-between;
@@ -53,15 +51,15 @@ footer {
       height: 30px;
       width: 190px;
       border-radius: 17px;
-      background: #FA5050;
-      color: #FFFFFF;
+      background: $button-background;
+      color: $text-color;
       border: 0;
       outline: 0;
 
       &:hover {
-        -webkit-box-shadow: 5px 5px 10px 1px rgba(196, 121, 121, 1);
-        -moz-box-shadow: 5px 5px 10px 1px rgba(196, 121, 121, 1);
-        box-shadow: 5px 5px 10px 1px rgba(196, 121, 121, 1);
+        -webkit-box-shadow: 5px 5px 10px 1px $button-background;
+        -moz-box-shadow: 5px 5px 10px 1px $button-background;
+        box-shadow: 5px 5px 10px 1px $button-background;
       }
 
       &:active {
@@ -80,6 +78,10 @@ footer {
     &__text {
       width: 300px;
       font-size: 0.75em;
+      &_copyright{
+        font-size: 0.75em;
+        color: $red;
+      }
     }
 
     &__label {
