--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,46 +1,38 @@
-@import "./footer";
-@import "./asside";
-@import "./colors";
-
-$header_height: 4rem;
-$main_height: calc(100vh - #{$header_height});
-
-@font-face {
-  font-family: Gothic;
-  src: url("./fonts/CenturyGothic.ttf") format("truetype");
-}
-
-p{
-  margin: 0;
-}
-
-body, html{
-  margin: 0;
-  height: 100%;
-  width: 100%;
-  font-family: Gothic, sans-serif;
-}
-
-#root {
-  background: $background;
-  height: 100%;
-  width: 100%;
-  display: grid;
-  grid-template-areas:  "aside header"
-                        "aside  main"
-                        "aside  footer";
-  grid-template-rows: $header_height $main_height 15rem;
-  grid-template-columns: 3rem 1fr;
-}
-
-header {
-  outline: 0.5px solid #dff1ff;
-  grid-area: header;
-}
-
 main {
   grid-area: main;
   outline: 0.5px solid #dff1ff;
 }
 
+.main {
 
+  &__slider{
+    width: 1800px;
+    height: 100%;
+  }
+
+  &__slide{
+    background-image: url("../assets/pages/slide_1.jpg");
+  }
+
+  &__slide-down {
+    border-radius: 25px;
+    position: absolute;
+    left: 50%;
+    bottom: 10px;
+    color: #FFFFFF;
+    width: 30px;
+    height: 50px;
+    margin-top: -35px;
+    box-shadow: inset 0 0 0 1px #fff;
+  }
+}
+
+@keyframes scroll {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity:1;
+    transform: translateY(46px);
+  }
+}
