--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,19 +6,21 @@ main {
 .main {
 
   &__slider{
-    width: 1800px;
-    height: 100%;
+    width: calc(100vw - 65px);
+    height: 95%;
   }
 
   &__slide{
+    height: calc(100vh - 4rem);
     background-image: url("../assets/pages/slide_1.jpg");
+
   }
 
   &__slide-down {
     border-radius: 25px;
     position: absolute;
     left: 50%;
-    bottom: 10px;
+    bottom: 30px;
     color: #FFFFFF;
     width: 30px;
     height: 50px;
