--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -10,8 +10,15 @@ footer {
     height: 100%;
     padding-left: 3rem;
 
+    @media (max-width: 1100px) {
+      flex-direction: column;
+      align-items: center;
+    }
+
     &__content {
       display: flex;
+      min-height: 170px;
+      min-width: 200px;
       flex-direction: column;
       justify-content: space-between;
       flex-grow: 1;
@@ -29,7 +36,8 @@ footer {
     }
 
     &__input {
-      width: 300px;
+      max-width: 300px;
+      min-width: 100px;
       height: 35px;
       border: 0;
       font-family: inherit;
@@ -74,11 +82,13 @@ footer {
 
     &__title {
       font-size: 1.5em;
-      width: 300px;
+      max-width: 300px;
+      min-width: 100px;
     }
 
     &__text {
-      width: 300px;
+      max-width: 300px;
+      min-width: 100px;
       font-size: 0.75em;
       &_copyright{
         font-size: 0.75em;
@@ -87,7 +97,8 @@ footer {
     }
 
     &__label {
-      width: 300px;
+      max-width: 300px;
+      min-width: 100px;
       color: #707070;
       font-size: 1em;
     }
