--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -11,7 +11,7 @@ footer {
     padding-left: 3rem;
 
     @media (max-width: 1100px) {
-      flex-direction: column;
+      flex-wrap: wrap;
       align-items: center;
     }
 
@@ -23,6 +23,10 @@ footer {
       justify-content: space-between;
       flex-grow: 1;
       padding: 20px 40px 10px 40px;
+
+      @media (min-width: 668px) {
+        width: 600px;
+      }
     }
 
     &__contacts {
@@ -90,7 +94,8 @@ footer {
       max-width: 300px;
       min-width: 100px;
       font-size: 0.75em;
-      &_copyright{
+
+      &_copyright {
         font-size: 0.75em;
         color: $red;
       }
