--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,6 +1,8 @@
 $red: #FA5050;
 
-$background: #0E0F10;
+//$background: #0E0F10;
+$background: black;
 $text-color: #FFFFFF;
+$grey-text-color: grey;
 $button-background: $red;
 $footer-background: #FFFFFF;
