--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -60,8 +60,18 @@ main {
   box-sizing: border-box;
   padding-right: 5em;
 }
+.col-7 {
+  width: 58.33333333333333%;
+  box-sizing: border-box;
+  padding-right: 5em;
+}
+.col-5 {
+  width: 41.66666666666667%;
+  box-sizing: border-box;
+  padding-right: 5em;
+}
 
-#slide_3, #slide_4, #slide_5 {
+#slide_3, #slide_4, #slide_5, #slide_6 {
   display: flex !important;
   align-content: center;
   align-items: center;
@@ -78,6 +88,12 @@ main {
     p{
       line-height: 2em;
     }
+  }
+}
+
+#slide_6{
+  .main__content{
+    padding: 0 !important;
   }
 }
 
@@ -118,4 +134,10 @@ h2{
   display: block;
   width: 10em;
   margin-bottom: 10px;
+}
+
+
+#map {
+  width: 100%;
+  height: 500px;
 }
