--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,6 @@
 @import "./colors";
 @import "slides/slide_2";
+@import "slides/slide_6";
 
 main {
   grid-area: main;
@@ -56,8 +57,9 @@ main {
   color: white;
 }
 
-.col-6 {
-  width: 50%;
+
+.col-8 {
+  width: 66.66666666666667%;
   box-sizing: border-box;
   padding-right: 5em;
 }
@@ -66,8 +68,18 @@ main {
   box-sizing: border-box;
   padding-right: 5em;
 }
+.col-6 {
+  width: 50%;
+  box-sizing: border-box;
+  padding-right: 5em;
+}
 .col-5 {
   width: 41.66666666666667%;
+  box-sizing: border-box;
+  padding-right: 5em;
+}
+.col-4 {
+  width: 33.33333333333333%;
   box-sizing: border-box;
   padding-right: 5em;
 }
@@ -135,10 +147,4 @@ h2{
   display: block;
   width: 10em;
   margin-bottom: 10px;
-}
-
-
-#map {
-  width: 100%;
-  height: 500px;
 }
