--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -47,7 +47,7 @@ main {
   }
 }
 
-#slick-slide-control00, #slick-slide-control01, #slick-slide-control02{
+#slick-slide-control00, #slick-slide-control01, #slick-slide-control02, #slick-slide-control03, #slick-slide-control04, #slick-slide-control05, #slick-slide-control06{
   &:before{
     color: white;
   }
