--- a/src/styles/slides/slide_2.scss
+++ b/src/styles/slides/slide_2.scss
@@ -4,7 +4,8 @@
   justify-content: center;
   align-items: center;
   position: absolute;
-  width: 600px;
+  max-width: 600px;
+  min-width: 100px;
   left: 500px;
   bottom: 100px;
   background: #2d2d2d;
