--- a/src/styles/slides/slide_7.scss
+++ b/src/styles/slides/slide_7.scss
@@ -9,6 +9,7 @@
   background-image: none !important;
 
   .main__content {
+    padding: 2%;
     position: relative;
     top: inherit;
     width: 100%;
