--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,10 +1,16 @@
 @import "./footer";
 @import "./asside";
+@import "./header";
 @import "./colors";
 @import "./main";
+@import "./consts";
 
-$header_height: 4rem;
-$main_height: calc(100vh - #{$header_height});
+*, *:after, *:before {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  //transition: .5s ease-in-out; /* добавим плавность переходов для всех элементов страницы*/
+}
 
 @font-face {
   font-family: Gothic;
@@ -31,13 +37,33 @@ body, html{
   grid-template-areas:  "aside header"
                         "aside  main"
                         "footer  footer";
-  grid-template-rows: $header_height $main_height 15rem;
+  grid-template-rows: $header_height $main_height 1fr;
   grid-template-columns: 3rem 1fr;
 }
 
 header {
   outline: 0.5px solid #dff1ff;
   grid-area: header;
+}
+
+
+@media (max-width: 768px) {
+  /* скрываем сайдбар */
+  #root {
+    background: $background;
+    height: 100%;
+    width: 100%;
+    display: grid;
+    grid-template-areas:  "header"
+                          "main"
+                          "footer";
+    grid-template-rows: $header_height $main_height 1fr;
+    grid-template-columns: 1fr;
+  }
+
+  aside {
+    display: none;
+  }
 }
 
 
