--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -22,11 +22,11 @@ p{
 }
 
 body, html{
-  margin: 0;
   height: 100%;
-  width: 100%;
+  margin: 0 auto;
   font-family: Gothic, sans-serif;
   color: $text-color;
+  font-size: 18px;
 }
 
 #root {
@@ -38,7 +38,7 @@ body, html{
                         "aside  main"
                         "footer  footer";
   grid-template-rows: $header_height $main_height 1fr;
-  grid-template-columns: 3rem 1fr;
+  grid-template-columns: 40px 1fr;
 }
 
 header {
