--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,8 @@
 @import "./colors";
-@import "slides/slide_1";
-@import "slides/slide_2";
-@import "slides/slide_4";
+@import "slides/main-slide";
+@import "slides/about-slide";
+@import "slides/collaboration-slide";
+@import "slides/technical-requirements-slide";
 @import "slides/slide_6";
 @import "slides/slide_7";
 @import "slides/price-slide";
@@ -12,10 +13,11 @@ main {
 }
 
 .main {
-
+  width: 100%;
+  height: 100%;
 
   &__slider {
-    width: calc(100vw - 65px);
+    width: calc(100vw - 70px);
     height: 95%;
     padding: 10px;
     @media (max-width: 768px) {
@@ -135,12 +137,13 @@ a.slider__link.slider__link--active, a.slider__link.slider__link--active:active 
 }
 
 .slider__navigator {
-  width: 80%;
+  width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   margin-top: 10px;
-  font-size: 20px;
-  letter-spacing: 0.08em;
+  font-size: calc(9px + 1vw);
+  //letter-spacing: 0.08em;
+  padding: 5px;
 }
 
 .row {
