--- a/src/styles/slides/collaboration-slide.scss
+++ b/src/styles/slides/collaboration-slide.scss
@@ -1,12 +1,13 @@
 @import "../colors";
 
-#price-slide {
+#collaboration-slide {
   display: flex;
   align-content: center;
   align-items: center;
   justify-content: center;
   width: 100%;
   height: 90%;
+  font-size: calc(9px + 1vw);
 
   .content {
     display: flex;
@@ -16,7 +17,7 @@
 
     @media (max-width: 768px) {
       flex-direction: column;
-      .size-example-img {
+      .collaboration-img {
         display: none;
       }
     }
@@ -25,7 +26,7 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
-      align-items: center;
+      //align-items: center;
       flex-grow: 1;
       flex-shrink: 1;
       width: 100%;
@@ -40,23 +41,8 @@
 
   }
 
-  .size {
-    font-size: calc(14px + 20vw);
-    font-weight: 600;
-  }
-
-  .price-table {
-    padding-top: 15%;
-    font-size: 1.5em;
-  }
-
-  .size-table > span {
-    font-size: 50px;
-  }
-
-  .details {
-    margin-top: 20px;
-    width: 100%;
+  .collaboration-header{
+    padding-top: 10%;
   }
 
 }
