фикс пошива и контактов

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,11 +1,14 @@
 @import "./colors";
+
 @import "slides/main-slide";
 @import "slides/about-slide";
 @import "slides/collaboration-slide";
 @import "slides/technical-requirements-slide";
-@import "slides/slide_6";
-@import "slides/slide_7";
+@import "slides/sewing-slide";
+@import "slides/contact-slide";
+@import "slides/project-slide";
 @import "slides/price-slide";
+
 @import "./consts";
 
 main {
