--- a/src/styles/slides/sewing-slide.scss
+++ b/src/styles/slides/sewing-slide.scss
@@ -1,4 +1,4 @@
-#collaboration-slide {
+#sewing-slide {
   display: flex;
   align-content: center;
   align-items: center;
@@ -15,7 +15,7 @@
 
     @media (max-width: 768px) {
       flex-direction: column;
-      .collaboration-img {
+      .sewing-slide__img {
         display: none;
       }
     }
@@ -31,15 +31,32 @@
       height: 100%;
     }
 
-    .collaboration-img  {
+    img {
       padding: 2%;
       max-height: 500px;
       max-width: 90%;
     }
   }
 
-  .collaboration-header{
+  .technical-requirements-header{
     padding-top: 10%;
   }
+
+  .sewing-slide__img {
+    padding: 2%;
+    max-height: 500px;
+    max-width: 90%;
+  }
+
+  .technical-requirements-slide____description-text {
+    width: 100%;
+    height: 100%;
+    padding-top: 18%;
+    padding-left: 18%;
+    padding-bottom: 5%;
+  }
 }
+
+
+
 
