--- a/src/styles/slides/collaboration-slide.scss
+++ b/src/styles/slides/collaboration-slide.scss
@@ -1,12 +1,15 @@
 @import "../colors";
 
 #collaboration-slide {
+  height: calc(100vh - 70px);
+
+  padding: 0 5vh 0 5vw;
+
   display: flex;
   align-content: center;
   align-items: center;
   justify-content: center;
-  width: 100%;
-  height: 90%;
+
   font-size: calc(9px + 1vw);
 
   .content {
