--- a/src/styles/slides/main-slide.scss
+++ b/src/styles/slides/main-slide.scss
@@ -1,12 +1,13 @@
 #main-slide {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: calc(100vh - 70px);
+
+  display: flex!important;
+  align-items: center;
 
   .main-slide__content {
-    position: relative;
-    top: 30vh;
     padding: 3rem;
-    max-width: 500px;
+    max-width: 600px;
     font-size: 20px;
   }
 }
