--- a/src/styles/slides/technical-requirements-slide.scss
+++ b/src/styles/slides/technical-requirements-slide.scss
@@ -1,4 +1,6 @@
 #technical-requirements-slide {
+  padding: 0 5vh 0 5vw;
+
   display: flex;
   align-content: center;
   align-items: center;
@@ -10,8 +12,6 @@
   .content {
     display: flex;
     flex-direction: row;
-    width: 100%;
-    height: 100%;
 
     @media (max-width: 768px) {
       flex-direction: column;
@@ -44,8 +44,8 @@
   }
 
   .technical-requirements-slide__description-box {
-    background: url("../assets/pages/technical-requirements.png") no-repeat;
-    background-size: cover;
+    //background: url("../assets/pages/technical-requirements.png") no-repeat;
+    //background-size: cover;
     font-size: calc(4px + 1vw);
   }
 
