--- a/src/styles/slides/contact-slide.scss
+++ b/src/styles/slides/contact-slide.scss
@@ -1,12 +1,10 @@
-@import "../colors";
-
 #contact-slide {
+  width: 100%;
+  height: calc(100vh - 70px);
   display: flex;
   align-content: center;
   align-items: center;
   justify-content: center;
-  width: 100%;
-  height: 90%;
   font-size: calc(9px + 1vw);
 
   .content {
