--- a/src/styles/slides/price-slide.scss
+++ b/src/styles/slides/price-slide.scss
@@ -14,7 +14,7 @@
     width: 100%;
     height: 100%;
 
-    @media (max-width: 768px) {
+    @media all and (max-width: 768px) {
       flex-direction: column;
       .size-example-img {
         display: none;
