--- a/src/styles/slides/project-slide.scss
+++ b/src/styles/slides/project-slide.scss
@@ -1,44 +1,108 @@
 #project-slide {
-    display: flex;
-    align-content: center;
-    align-items: center;
-    justify-content: center;
+  width: 100%;
+  height: calc(100vh - 70px);
+  display: grid!important;
+  grid-gap: 5px;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+
+  .project-slide__centered-cell{
+    align-self: center;
+  }
+
+  img{
     width: 100%;
-    height: 90%;
-    font-size: calc(9px + 1vw);
+  }
 
-    .content {
-      display: flex;
-      flex-direction: row;
-      width: 100%;
-      height: 100%;
+  .project-slide__header-block{
+    grid-row-start: 1;
+    grid-column-start: 1;
+    grid-row-end: 2;
+    grid-column-end: 3;
+  }
 
-      @media (max-width: 768px) {
-        flex-direction: column;
-        .collaboration-img {
-          display: none;
-        }
-      }
+  .project-slide__fish-img{
+    grid-row-start: 1;
+    grid-column-start: 4;
+    grid-row-end: 4;
+    grid-column-end: 5;
+  }
 
-      &__item {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        //align-items: center;
-        flex-grow: 1;
-        flex-shrink: 1;
-        width: 100%;
-        height: 100%;
-      }
+  .project-slide__paint-img{
+    grid-row-start: 2;
+    grid-column-start: 3;
+    grid-row-end: 4;
+    grid-column-end: 4;
+  }
 
-      .collaboration-img  {
-        padding: 2%;
-        max-height: 500px;
-        max-width: 90%;
-      }
+  .project-slide__japan-img{
+    grid-row-start: 3;
+    grid-column-start: 1;
+    grid-row-end: 4;
+    grid-column-end: 3;
+  }
+
+  @media all and (max-width: 768px) {
+    .project-slide__header-block{
+      grid-row-start: 1;
+      grid-column-start: 1;
+      grid-row-end: auto;
+      grid-column-end: 5;
     }
-
-    .collaboration-header{
-      padding-top: 10%;
+    .project-slide__paint-img, .project-slide__fish-img{
+      grid-row-start: auto;
+      grid-column-start: auto;
+      grid-row-end: auto;
+      grid-column-end: auto;
+    }
+    .project-slide__japan-img{
+      grid-row-start: 2;
+      grid-column-start: 2;
+      grid-row-end: auto;
+      grid-column-end: 5;
     }
   }
+
+  //display: flex;
+  //align-content: center;
+  //align-items: center;
+  //justify-content: center;
+  //width: 100%;
+  //height: 90%;
+  //font-size: calc(9px + 1vw);
+  //
+  //.content {
+  //  display: flex;
+  //  flex-direction: row;
+  //  width: 100%;
+  //  height: 100%;
+  //
+  //  @media (max-width: 768px) {
+  //    flex-direction: column;
+  //    .collaboration-img {
+  //      display: none;
+  //    }
+  //  }
+  //
+  //  &__item {
+  //    display: flex;
+  //    flex-direction: column;
+  //    justify-content: center;
+  //    //align-items: center;
+  //    flex-grow: 1;
+  //    flex-shrink: 1;
+  //    width: 100%;
+  //    height: 100%;
+  //  }
+  //
+  //  .collaboration-img  {
+  //    padding: 2%;
+  //    max-height: 500px;
+  //    max-width: 90%;
+  //  }
+  //}
+  //
+  //.collaboration-header{
+  //  padding-top: 10%;
+  //}
+}
