--- a/src/styles/slides/sewing-slide.scss
+++ b/src/styles/slides/sewing-slide.scss
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 90%;
+  height: calc(100vh - 70px);
   font-size: calc(9px + 1vw);
 
   .content {
