--- a/src/styles/slides/price-slide.scss
+++ b/src/styles/slides/price-slide.scss
@@ -1,12 +1,12 @@
 @import "../colors";
 
 #price-slide {
+  width: 100%;
+  height: calc(100vh - 70px);
   display: flex;
   align-content: center;
   align-items: center;
   justify-content: center;
-  width: 100%;
-  height: 90%;
 
   .content {
     display: flex;
